# mega-account

./: README.md  pyproject.toml
mega_account/: __init__.py  api_client.py  cli.py  crypto.py  exceptions.py  manager.py  models.py
mega_account/commands/: __init__.py  add.py  import_api.py  info.py
